// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BlogPreview matches snapshot (dark mode) 1`] = `
<div>
  <section
    class="css-mp2xo3"
    data-testid="blog-preview"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-15xfbvd-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-6vqp9g"
          >
            From the Desk
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-62jhto-MuiTypography-root"
          >
            Musings on cybersecurity, hacking tools, and the books that shaped my thinking. Here are a few recent pieces.
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1u32zg0"
      >
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/08/instagram-phishing-using-hiddeneye.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Security
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                Instagram phishing using Hiddeneye
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                August 03, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/06/fsociety-hacking-tools-from-mr-robot.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Tools
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                FSOCIETY hacking tools from Mr. Robot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                June 28, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/06/see-previously-connected-wifi-passwords.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Networking
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                See previously connected wifi passwords using cmd
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                June 09, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-991l7"
            href="https://hackzism.blogspot.com/2020/05/keylogger-with-python.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-185jvbo-MuiTypography-root"
              >
                Python
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-v7mxg6-MuiTypography-root"
              >
                Keylogger with Python — capture every keystroke
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-7bd0t2-MuiTypography-root"
              >
                May 15, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-sepk4a-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-1795rq0"
        >
          <a
            data-discover="true"
            href="/blogs"
          >
            View all articles
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BlogPreview matches snapshot (light mode) 1`] = `
<div>
  <section
    class="css-adn3is"
    data-testid="blog-preview"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-15xfbvd-MuiContainer-root"
    >
      <div>
        <div>
          <h2
            class="css-6ecw7o"
          >
            From the Desk
          </h2>
        </div>
        <div>
          <p
            class="MuiTypography-root MuiTypography-body1 css-hvvbkq-MuiTypography-root"
          >
            Musings on cybersecurity, hacking tools, and the books that shaped my thinking. Here are a few recent pieces.
          </p>
        </div>
      </div>
      <div
        class="MuiBox-root css-1u32zg0"
      >
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-1c7iavw"
            href="https://hackzism.blogspot.com/2020/08/instagram-phishing-using-hiddeneye.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-1kojclp-MuiTypography-root"
              >
                Security
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-kcngmx-MuiTypography-root"
              >
                Instagram phishing using Hiddeneye
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-o2uynp-MuiTypography-root"
              >
                August 03, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-14dpbay-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-1c7iavw"
            href="https://hackzism.blogspot.com/2020/06/fsociety-hacking-tools-from-mr-robot.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-1kojclp-MuiTypography-root"
              >
                Tools
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-kcngmx-MuiTypography-root"
              >
                FSOCIETY hacking tools from Mr. Robot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-o2uynp-MuiTypography-root"
              >
                June 28, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-14dpbay-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-1c7iavw"
            href="https://hackzism.blogspot.com/2020/06/see-previously-connected-wifi-passwords.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-1kojclp-MuiTypography-root"
              >
                Networking
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-kcngmx-MuiTypography-root"
              >
                See previously connected wifi passwords using cmd
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-o2uynp-MuiTypography-root"
              >
                June 09, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-14dpbay-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
        <div
          style="perspective: 600px;"
        >
          <a
            class="MuiBox-root css-1c7iavw"
            href="https://hackzism.blogspot.com/2020/05/keylogger-with-python.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              class="MuiBox-root css-14inuc3"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 blog-tag css-1kojclp-MuiTypography-root"
              >
                Python
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-kcngmx-MuiTypography-root"
              >
                Keylogger with Python — capture every keystroke
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-o2uynp-MuiTypography-root"
              >
                May 15, 2020
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 blog-arrow css-14dpbay-MuiTypography-root"
              >
                read article →
              </p>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          class="MuiBox-root css-1ulbt9m"
        >
          <a
            data-discover="true"
            href="/blogs"
          >
            View all articles
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
